# Deep-Research-Document-Generator

./: .env.example  .gitignore  README.md  pyproject.toml
output/: agentic-ai-automations.docx  history--of-china.docx  history--of-china.md  history-of-israel.docx  history-of-israel.md  neuroplasticity-in-2026.docx  test.docx  test.md  virat-kohli-career.docx  virat-kohli-career.md
src/: __init__.py  config.py  graph.py  main.py  nodes.py  state.py  ui.py
src/agents/: __init__.py  editor.py  planner.py  researcher.py  writer.py
src/llm/: __init__.py  client.py
src/prompts/: __init__.py  editor_prompts.py  planner_prompts.py  writer_prompts.py
src/publishers/: __init__.py  docx_compiler.py  markdown_compiler.py
src/tools/: __init__.py  search.py  wikipedia.py
tests/integration/: test_full_pipeline.py
tests/unit/: __init__.py  test_compilers.py  test_editor.py  test_graph.py  test_planner.py  test_researcher.py  test_state.py  test_writer.py
